<?xml version="1.0"?>
<package format="2">
  <name>motor_control</name>
  <version>0.0.1</version>
  <description>Provides an interface between diff_drive_controller and an rpi.</description>

  <maintainer email="churchill.aloha@gmail.com">Aloha Churchill</maintainer>
  <author email="churchill.aloha@gmail.com">Aloha Churchill</author>
  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>
